# Quick-Prototype-Template

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  start_dev.sh
api/draft/: draft.access_controls.v1.rs  mod.rs
application/: Cargo.toml  index.html
application/src/: main.rs
deployments/infra/: .terraform.lock.hcl  creds.json  example.terraform.tfvars  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
entity/: Cargo.toml  README.md
entity/src/: clients.rs  deliveries.rs  invitations.rs  location.rs  location_kind.rs  map_point.rs  merchant.rs  merchant_invitations.rs  mod.rs  poem_sessions.rs  prelude.rs  profiles.rs  roles.rs  user_roles.rs  users.rs
front_end/: package-lock.json  package.json
front_end/src/: App.js
front_end/src/controllers/: index.js
front_end/src/pages/: index.js
migration/: Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
migrations/: 20230620205119_init.down.sql  20230620205119_init.up.sql
protos/: crud_template.proto
protos/draft/: writer_interface.proto
protos/draft/access_controls/v1/: models.proto  service.proto
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/common/: crypto.rs  database.rs  jwt.rs  mod.rs  router.rs  runtime.rs  templates.rs
server/src/controller/: users.rs
server/src/handler/: app.rs  login.rs  mod.rs  signup.rs
server/templates/: app.html  login.html  signup.html
src/: main.rs
src/common/: database.rs  jwt.rs  router.rs  session.rs  templates.rs
src/handler/: app.rs  login.rs  mod.rs  signup.rs
src/middleware/: authentication_token.rs  identification_token.rs  mod.rs  refresh_token.rs
templates/: app.html  base.html  index.html  signup.html
templates/components/: sidebar.html
