[package]
name = "Quick-Prototype-Template"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "migration", "entity"]

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
async-graphql = { version = "4.0.10", features = ["decimal", "chrono", "dataloader"] }
async-graphql-poem = { version = "4.0.10" }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "full"], optional = true}
dotenv = "0.15.0"
validator = { version = "0.12", features = ["derive", "phone"] }
log = "0.4.0"
env_logger = "0.8.4"
futures = "0.3"
async-trait = "0.1.56"
poem = { version = "1.3.48", features = ["csrf", "static-files", "session"]}
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4.22"
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8"
futures-util = "0.3.0"
serde_json = "1.0"
yew = "0.19"
tera = "1.17.1"
lazy_static = "1.4.0"
poem-dbsession = {version = "0.3.50", features = ["sqlx-postgres-native-tls"]}
sqlx = {version = "0.6.2", features = ["postgres"]}
reqwest-wasm = { version = "0.11.15", features = ["json"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
poem-spa = "0.9.1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
pretty_env_logger = "0.4"
http-body-util = "0.1.0-rc.2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
http = "0.2"
axum = { version = "0.6.18", optional = true}
console_error_panic_hook = "0.1"
console_log = "1"
cfg-if = "1"
leptos = { version = "0.3", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.3", optional = true }
leptos_meta = { version = "0.3", default-features = false }
leptos_router = { version = "0.3", default-features = false }
simple_logger = "4"
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
thiserror = "1.0.38"
tracing = { version = "0.1.37", optional = true }