[package]
name = "Quick-Prototype-Template"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["application", "server"]

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "api"
path = "api/src/main.rs"

[[bin]]
name = "application"
path = "application/src/main.rs"

[dependencies]
askama = "0.11"
axum = "0.6.18"
clap = "4.3.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = "0.11.3"
serde = "1.0.164"
tera = {version = "1.19.0", default-features = false}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = "0.16.0"
axum_csrf = "0.6.2"