[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
env_logger = "0.8.4"
chrono = "0.4.22"

[dependencies.sea-orm-migration]
version = "^0.8.0"
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
