[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = "0.11"
axum = "0.6.18"
axum-macros = "0.3.7"
axum_csrf = "0.6.2"
axum_session = { version = "0.2.3", features = ["postgres-rustls"] }
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
sea-orm = "0.11.3"
serde = "1.0.164"
sqlx = { version = "0.6.3", features = ["postgres"]}
tera = {version = "1.19.0", default-features = false}
tokio = { version = "1.0", features = ["full"] }
uuid = "1.4.1"
validator = "0.16.0"
pbkdf2 = "0.10"
